--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
-    <link rel="shortcut icon" href="favicon.gif">
+    <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
     <style>
+        audio{
+                display:none;
+            } 
+        
         body {
             display: flex;
             flex-direction: column;
@@ -139,6 +143,9 @@
     </style>
 </head>
 <body>
+    <audio controls autoplay loop> 
+         <source src="game-music-teste-204327.mp3" type="audio/mp3" > 
+        </audio>
     <div id="game-container">
         <div id="score-board">
             <div>High Score: <span id="high-score">0</span></div>
