--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
-    <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
+    <title>Snake Game🐍</title>
+    <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
     <style>
         audio{
                 display:none;
